--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
 <audio autoplay="autoplay" loop="loop" id="autoPlayMuc">
 <!--此处应放入不同格式的文件以兼容各种浏览器-->
-	<source src="music/hedu.mp3" type="audio/mpeg">
+	<source src="music/kanong.mp3" type="audio/mpeg">
     Your browser does not support the audio tag.
     </audio>
 <div class="pauseBtn rotate">&nbsp;</div>
@@ -59,9 +59,18 @@
 		</div>
 	</div>
 	<img src="img/xinji5.jpg" style="width: 80%;height: auto;margin-top: 140px;text-align:center" alt="" />
+	<img src="img/initpintu.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<img src="img/xinji3.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<img src="img/xinji6.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<img src="img/xinji10.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<img src="img/xinji11.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<img src="img/xinji12.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<img src="img/xinji13.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
 	<img src="img/xinji1.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
 	<img src="img/xinji4.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
 	<img src="img/xinji2.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<img src="img/xinji7.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<img src="img/xinji8.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
 </div>
 
 <script type="text/javascript">
