--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 				线线缠绕，快乐拥抱;<br />
 				水水相融，情意浓浓;<br />
 				粽粽连结，祝福不歇!<br />
-				端午佳节快乐!<br/>
+				端午佳节安康!<br/>
 		</div>
 		<div id="loveHeart">
 			<canvas id="garden"></canvas>
