--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="text/javascript" src="js/garden.js"></script>
 <script type="text/javascript" src="js/functions.js"></script>
 <script type="text/javascript" src="js/play.js"></script>
-<script>
+<!--<script>
 var _hmt = _hmt || [];
 (function() {
   var hm = document.createElement("script");
@@ -25,7 +25,7 @@ var _hmt = _hmt || [];
   var s = document.getElementsByTagName("script")[0]; 
   s.parentNode.insertBefore(hm, s);
 })();
-</script>
+</script>-->
 </head>
 
 <body>
