--- a/index.html
+++ b/index.html
@@ -16,8 +16,23 @@
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/garden.js"></script>
 <script type="text/javascript" src="js/functions.js"></script>
-<script type="text/javascript" src="js/play.js"></script>
-
+<script type="text/javascript" src="js/pay.js"></script>
+<style>
+.bigImgBox{position:fixed;top:0;left:0;width:100%;background:black;z-index:1;height:100%;display:none;}
+.bigImg{width:96%;height:100%;position:fixed;top:50px;left:2%;z-index:10001;;text-align:center;z-index:2;display:none;}
+.bigImg div{width:100%;text-align:center;}
+.bigImg img{max-width:100%;height:auto;}
+.vertical-center{display: flex;justify-content:center;align-items:Center;}
+</style>
+<!--<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?bf4aa0c1ce1f508853a2988836576885";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>-->
 </head>
 
 <body>
@@ -58,20 +73,31 @@
 			</div>
 		</div>
 	</div>
-	<img src="img/xinji5.jpg" style="width: 80%;height: auto;margin-top: 140px;text-align:center" alt="" />
-	<img src="img/initpintu.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji3.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji6.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji10.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji11.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji12.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji13.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji1.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji4.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji2.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji7.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
-	<img src="img/xinji8.jpg" style="width: 80%;height: auto;margin-top: 100px;text-align:center" alt="" />
+	<div id="imgBox" style="text-align:center;">
+		<img src="img/xinji5.jpg" style="width: 95%;height: auto;margin-top: 140px;text-align:center" alt="" />
+		<img src="img/initpintu.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji3.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji6.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji10.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji11.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji12.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji13.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji1.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji4.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji2.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji7.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+		<img src="img/xinji8.jpg" style="width: 95%;height: auto;margin-top: 70px;text-align:center" alt="" />
+	</div>
 </div>
+
+<!-- 弹出层start -->
+<div class="bigImgBox"></div>
+<div class="bigImg">
+	<div class="vertical-center" style="width:100%;height:100%;">
+		<span><img src="img/xinji8.jpg"><span>
+	</div>
+</div>
+<!-- 弹出层end -->
 
 <script type="text/javascript">
 var offsetX = $("#loveHeart").width() / 2;
@@ -105,6 +131,29 @@ if (!document.createElement('canvas').getContext) {
 	adjustCodePosition();
 	$("#code").typewriter();
 }
+
+
+var bigImg = $(".bigImg");
+var bigImgBox = $('.bigImgBox');
+
+$("#imgBox img").click(function(){
+	bigImg.show();
+	bigImgBox.show();
+	var src = $(this).attr('src');
+    $('.bigImg img').attr('src',src).css({
+        'margin':'auto',
+        'width':'100%'
+    });
+});
+
+bigImgBox.click(function(){
+	$(this).hide();
+	bigImg.hide();
+});
+bigImg.click(function(){
+	$(this).hide();
+	bigImgBox.hide();
+});
 </script>
 </body>
 </html>
